--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,10 +33,10 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }} 
       # SCA
-      - name: Snyk
-        uses: snyk/actions@0.1.1
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - name: Run Snyk to check for vulnerabilities
+      uses: snyk/actions/dotnet@master
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
       
       # Run dotnet build and publish
