add trufflehog remove snyk

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,11 +39,19 @@ jobs:
           dotnet build --configuration Release
           dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' 
        
+      # Trufflehog secrets scan
+
+      - uses: actions/checkout@master
+      - name: trufflehog-actions-scan
+       uses: edplato/trufflehog-actions-scan@master
+       with:
+         scanArguments: "--regex --entropy=False --max_depth=5 --rules /regexes.json" # Add custom options here*
       # SCA
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/dotnet@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}          
+      #- name: Run Snyk to check for vulnerabilities
+      # uses: snyk/actions/dotnet@master
+      #  env:
+      #    SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}  
+              
       # Deploy to Azure Web apps
       - name: 'Run Azure webapp deploy action using publish profile credentials'
         uses: azure/webapps-deploy@v2
